2005-08-22  Emanuele Aina <emanuele.aina@gmail.com>

	* glossario.html: posta la traduzione di "minimize, to" all'infinito
	* glossario.html: cambiato "source" in "source code" per essere più chiaro
	e aggiunto per la traduzione "codice sorgente" migliorando la spiegazione

2005-07-20  Emanuele Aina <emanuele.aina@tiscali.it>

	* index.html: corretto il collegamento agli archivi della lista
	da www.linux.it a lists.linux.it

2005-02-24  Emanuele Aina <emanuele.aina@tiscali.it>

	* buona_traduzione.html: corretto il tag <keyboard> in <kbd>

2005-02-10  Emanuele Aina <emanuele.aina@tiscali.it>

	* buona_traduzione.html: migliorata una frase nella sezione "Virgolette"

2005-02-09  Emanuele Aina <emanuele.aina@tiscali.it>

	* buona_traduzione.html: modificato la sezione riguardante le virgolette
	chiarendo meglio cosa deve decidere il traduttore

2005-02-06  Emanuele Aina <emanuele.aina@tiscali.it>

	* buona_traduzione.html: aggiunta una copia locale
	* data_ora_valuta.html: aggiunto grazie a Luca Ferretti
	* index.html: riscrittura parziale per poter ospitare tutta la
	documentazione prodotta e per avere uno stile marginalmente migliore :)
	* index.html: aggiornati i link per evitare redirect inutili (HTTP 301)

2004-12-13  Emanuele Aina <emanuele.aina@tiscali.it>

	* index.html: cambiati i link alla pagina personale di Emanuele
	dopo che disastro.cuore.org è morto del tutto e il sito è stato spostato
	su http://81100.eu.org/em/

2004-06-19  Emanuele Aina <em@disastro.cuore.org>

	* glossario.html: cambiato "edit, to" da "editare" a "modificare"

2004-06-08  Emanuele Aina <em@disastro.cuore.org>

	* glossario.html: aggiunto "genitore" per "parent"
	* glossario.html: cambiato "link, to" in "link" e aggiunta "collegamento"
	come traduzione, corredata di nota esplicativa

2004-06-06  Emanuele Aina <em@disastro.cuore.org>

	* glossario.html: corretto il genere di "digest": è maschile

2004-05-30  Emanuele Aina <em@disastro.cuore.org>
