@@ -1538,23 +1538,23 @@
      
      <li>
        <dl>
-         <dt xml:lang="en">port</dt>
-         <dd>Invariato, porta</dd>
-       </dl>
-       <p class="notes">Se ci si riferisce alla conversione di un software
-       verso una piattaforma differente da quella originale va mantenuto
-       invariato, mentre va tradotto con "porta" se si è nell'ambito dei
-       protocolli di comunicazione.</p>
-     </li>
- 
-     <li>
-       <dl>
          <dt xml:lang="en">port, to</dt>
          <dd>fare il port</dd>
        </dl>
-       <p class="notes"></p>
+       <p class="notes">Se non ci si riferisce alla conversione di un
+       programma verso una piattaforma differente da quella originale
+       si veda "port".</p>
      </li>
 
+     <li>
+       <dl>
+         <dt xml:lang="en">port</dt>
+         <dd>porta</dd>
+       </dl>
+       <p class="notes">In particolare in ambito di protocolli di
+       comunicazione.</p>
+     </li>
+ 
      <li>
        <dl>
          <dt xml:lang="en">print, to</dt>
