@@ -3,6 +3,7 @@
 	* glossario.html: posta la traduzione di "minimize, to" all'infinito
 	* glossario.html: cambiato "source" in "source code" per essere più chiaro
 	e aggiunto per la traduzione "codice sorgente" migliorando la spiegazione
+	* glossario.html: evidenziata meglio la diffrenza tra "port" e "port, to"
 
 2005-07-20  Emanuele Aina <emanuele.aina@tiscali.it>
 
